image page uploads

--- a/app/views/layout-user-testing.html
+++ b/app/views/layout-user-testing.html
@@ -37,7 +37,8 @@
     .govuk-header__navigation-item--active .govuk-header__link {text-decoration: underline; cursor: default; }
     .govuk-error-summary,
     .govuk-error-message,
-    .govuk-error-summary__list li {display: none; }
+    .govuk-error-summary__list li,
+    .none, .none0, .none1 {display: none; }
 
     .govuk-form-group--error > fieldset > .govuk-error-message,
     .govuk-form-group--error[data-test-for=textarea] > .govuk-error-message,
