--- a/app/views/nanomaterials-1149/cosmetic-products-alt-01.html
+++ b/app/views/nanomaterials-1149/cosmetic-products-alt-01.html
@@ -185,7 +185,7 @@
   id: "accordion-opss",
   classes: "opss-accordian__open-remove govuk-!-margin-bottom-0",
   items: [
-    {
+      {
       heading: {
         text: "Errors (3)"
       },
@@ -198,9 +198,7 @@
     },
     {
       heading: {
-        html: '<button type="button" id="incomplete-notifications-heading-1" aria-controls="incomplete-notifications-content-1" class="govuk-accordion__section-button" aria-describedby="incomplete-notifications-summary-1" aria-expanded="true">
-            Incomplete notifications (108)
-            <span class="govuk-accordion__icon" aria-hidden="true"></span></button>'
+        text: 'Incomplete notifications (108)'
       },
       summary: {
         html: '<p class="govuk-body govuk-!-margin-bottom-1">There are currently 2 incomplete notifications.</p>'
