--- a/app/views/product-case-testing/upload-a-product-image-success.html
+++ b/app/views/product-case-testing/upload-a-product-image-success.html
@@ -14,101 +14,206 @@
 
 {% block content %}
 
-{% from "govuk/components/notification-banner/macro.njk" import govukNotificationBanner %}
-{% set html %}
+
+  <div class="govuk-notification-banner govuk-notification-banner--success" role="alert"
+  aria-labelledby="govuk-notification-banner-title"
+  data-module="govuk-notification-banner">
+  <div class="govuk-notification-banner__header">
+    <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title" >
+      Success
+    </h2>
+  </div>
+  <div class="govuk-notification-banner__content">
   <p class="govuk-notification-banner__heading">
     The image was uploaded
   </p>
 
-{% endset %}
+</div>
+</div>
 
-{{ govukNotificationBanner({
-  html: html,
-  type: 'success'
-}) }}
 
 <div class="govuk-grid-row opss-equal-height-container">
 
     <section class="govuk-grid-column-two-thirds opss-equal-height__col" role="region" aria-label="Form">
         <form action="#" method="post" novalidate>
 
-{{ govukRadios({
-  idPrefix: "another",
-  name: "another",
-  classes: "govuk-!-padding-top-3",
 
-  fieldset: {
-    legend: {
-      text: "Do you want to add another image?",
-      isPageHeading: true,
-      classes: "govuk-fieldset__legend--l"
-    }
-  },
 
-  items: [
-    {
-      value: "yes",
-      text: "Yes"
-    },
-    {
-      value: "no",
-      text: "No"
-    }
-  ]
-}) }}
 
-{{ govukButton({
-  text: "Continue"
-}) }}
+
+
+
+
+
+
+<div class="govuk-form-group">
+
+  <fieldset class="govuk-fieldset">
+
+  <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+
+    <h1 class="govuk-fieldset__heading">
+      Do you want to add another image?
+    </h1>
+
+  </legend>
+
+
+  <div class="govuk-radios govuk-!-padding-top-3">
+
+
+
+
+
+        <div class="govuk-radios__item">
+          <input class="govuk-radios__input" id="another" name="another" type="radio" value="anotherimage">
+          <label class="govuk-label govuk-radios__label" for="another">
+        Yes
+      </label>
+
+        </div>
+
+
+
+
+
+
+
+        <div class="govuk-radios__item">
+          <input class="govuk-radios__input" id="another-2" name="another" type="radio" value="no">
+          <label class="govuk-label govuk-radios__label" for="another-2">
+        No
+      </label>
+
+        </div>
+
+
+
+
+  </div>
+
+
+</fieldset>
+
+
+</div>
+
+
+
+
+
+
+
+
+<button class="govuk-button" data-module="govuk-button">
+  Continue
+</button>
+
 
         </form>
     </section>
 
-    <section class="govuk-grid-column-one-third opss-equal-height__col">
+    <section id="myImages" class="govuk-grid-column-one-third opss-equal-height__col">
         <div class="govuk-!-margin-left-4 opss-borders opss-borders--left opss-borders--padding-l opss-borders--height-100">
 
             <h2 class="govuk-visually-hidden">The images you have added</h2>
             <dl class="govuk-summary-list govuk-!-font-size-14 opss-summary-list-aside">
-                <dt>
-                    <span class="govuk-visually-hidden">Title: </span>Sony hair dryer 3000
-                </dt>
-                <dd>
-                    <span class="govuk-visually-hidden">File name: </span>sony-hair-dryer-3000.jpg
-                </dd>
-                <dd>
-                    <span class="govuk-visually-hidden">Alternative image text: </span>A sony hair dryer 3000
-                </dd>
-                <dd>
-                    <span class="govuk-visually-hidden">The image: </span><img src="../public/images/hair-dryer.jpg" alt="Sony hair dryer 3000">
-                </dd>
-                <dd>
-                    <a href="/product-case-testing/remove-a-product-image-success" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-14">
-                        Remove<span class="govuk-visually-hidden">image Sony hair dryer 3000</span>
-                    </a>
-                </dd>
+                <div class="none0">
+                  <dt>
+                      <span class="govuk-visually-hidden">Title: </span><span id="imageTitle0"></span>
+                  </dt>
+                  <dd>
+                      <span class="govuk-visually-hidden">File name: </span><span id="fileName0"></span>
+                  </dd>
+                  <dd>
+                      <span class="govuk-visually-hidden">Alternative image text: </span><span id="imageDesc0"></span>
+                  </dd>
+                  <dd>
+                      <span class="govuk-visually-hidden">The image: </span><div class="imagearea0"></div>
+                  </dd>
+                  <dd>
+                      <a href="/product-case-testing/remove-a-product-image-success" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-14">
+                          Remove<span class="govuk-visually-hidden"> image 1</span>
+                      </a>
+                  </dd>
+                </div>
 
-                <dt>
-                    <span class="govuk-visually-hidden">Title: </span>Sony hair dryer 3000 with plug
-                </dt>
-                <dd>
-                    <span class="govuk-visually-hidden">File name: </span>sony-hair-dryer-3000-plug.jpg
-                </dd>
-                <dd>
-                    <span class="govuk-visually-hidden">Alternative image text: </span>Sony hair dryer with cable and plug
-                </dd>
-                <dd>
-                    <span class="govuk-visually-hidden">The image: </span><img src="../public/images/hair-dryer-with-plug.jpg" alt="Sony hair dryer 3000 with plug">
-                </dd>
-                <dd>
-                    <a href="/product-case-testing/remove-a-product-image-success" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-14">
-                        Remove<span class="govuk-visually-hidden"> image Sony hair dryer 3000 with plug</span>
-                    </a>
-                </dd>
+                <div class="none1">
+                  <dt>
+                      <span class="govuk-visually-hidden">Title: </span><span id="imageTitle1"></span>
+                  </dt>
+                  <dd>
+                      <span class="govuk-visually-hidden">File name: </span><span id="fileName1"></span>
+                  </dd>
+                  <dd>
+                      <span class="govuk-visually-hidden">Alternative image text: </span><span id="imageDesc1"></span>
+                  </dd>
+                  <dd>
+                      <span class="govuk-visually-hidden">The image: </span><div class="imagearea1"></div>
+                  </dd>
+                  <dd>
+                      <a href="/product-case-testing/remove-a-product-image-success" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-14">
+                          Remove<span class="govuk-visually-hidden"> image 2</span>
+                      </a>
+                  </dd>
+                </div>
             </dl>
 
         </div>
     </section>
 
 </div>
+
+{% endblock %}
+
+{% block bodyEnd %}
+
+  {% block scripts %}
+    {% include "includes/scripts-testing.html" %}
+    {% block pageScripts %}
+    {% endblock %}
+  {% endblock %}
+
+<script>
+  jQuery(document).ready(function(){
+
+    var img = new Image();
+    img.src = localStorage.theImage;
+
+
+    $('.imagearea').html(img);
+
+    setMenuState('products');
+    validateTheForm($("#main-content").find('form'));
+
+
+    var img0 = new Image();
+    img0.src = localStorage.theImage0;
+    img0.name = localStorage.theImageName0;
+    img0.title = localStorage.theImageTitle0;
+    img0.desc = localStorage.theImageDesc0;
+
+    if(localStorage.getItem('theImageName0') !== null){
+        $('#noImages').hide();
+
+        $('.imagearea0').html(img0);
+        $('#fileName0').text(img0.name);
+        $('#imageTitle0').text(img0.title);
+        $('#imageDesc0').text(img0.desc);
+
+        var myImagesID = $('#myImages');
+        myImagesID.find('.none0').show();
+        myImagesID.find('.none0 .govuk-link').click(function(e){
+            e.preventDefault();
+            localStorage.removeItem('theImage0');
+            localStorage.removeItem('theImageName0');
+            localStorage.removeItem('theImageTitle0');
+            localStorage.removeItem('imageDesc0');
+            window.location.assign($(this).attr('href'));
+        });
+    }
+
+  });
+</script>
 
 {% endblock %}
