uploading images work complete

--- a/app/views/create-cases-add-products/upload-a-product-image.html
+++ b/app/views/create-cases-add-products/upload-a-product-image.html
@@ -106,7 +106,7 @@
                     Continue
                 </button>
                                             <!-- the previous page -->
-                <a class="govuk-link govuk-link--no-visited-state" href="/create-cases-add-products/can-you-provide-an-image">Go back</a>
+                <a class="govuk-link govuk-link--no-visited-state opss-nojs-hide" href="javascript:history.go(-1)">Go back</a>
             </div>
         </form>
     </section>
