all page journey's done with context success page

--- a/app/views/create-cases-add-products/success-product-added-error.html
+++ b/app/views/create-cases-add-products/success-product-added-error.html
@@ -34,7 +34,7 @@
         <h3 class="govuk-notification-banner__heading">
             The product has been added
         </h3>
-        <p class="govuk-body">You can now create cases for this product record.</p>
+        <p class="govuk-body">You can now create cases for this product.</p>
     </div>
 </div>
 
