--- a/app/views/product-case-testing/cases-page.html
+++ b/app/views/product-case-testing/cases-page.html
@@ -539,3 +539,28 @@
 </script>
 
 {% endblock %}
+
+{% block bodyEnd %}
+
+  {% block scripts %}
+    {% include "includes/scripts-testing.html" %}
+    {% block pageScripts %}
+    {% endblock %}
+  {% endblock %}
+
+<script>
+  jQuery(document).ready(function(){
+
+    setMenuState('cases');
+    localStorage.removeItem('addCaseToProduct');
+    //validateTheForm($("#main-content").find('form'));
+
+    //$('#table-items').find('td .govuk-link').click(function(){
+        //localStorage.setItem('addCaseToProduct', 'yes');
+    //});
+
+  });
+</script>
+
+{% endblock %}
+
