--- a/app/views/create-cases-add-products/why-is-the-product-of-concern-error-2.html
+++ b/app/views/create-cases-add-products/why-is-the-product-of-concern-error-2.html
@@ -17,11 +17,11 @@
   titleText: "There is a problem",
   errorList: [
     {
-      text: "Enter information as to why the product is unsafe",
+      text: "Enter why the product is unsafe",
       href: "#why-unsafe"
     },
     {
-      text: "Enter information as to why the product is non-compliant",
+      text: "Enter why the product is non-compliant",
       href: "#why-noncompliant"
     }
   ]
@@ -66,7 +66,7 @@
         isPageHeading: false
     },
     errorMessage: {
-      text: "Enter information as to why the product is unsafe"
+      text: "Enter why the product is unsafe"
     },
     maxlength: 1500,
     hint: {
@@ -91,7 +91,7 @@
         isPageHeading: false
     },
     errorMessage: {
-      text: "Enter information as to why the product is non-compliant"
+      text: "Enter why the product is non-compliant"
     },
     countMessage: {
         classes: "govuk-!-font-size-16"
