--- a/app/views/product-case-testing/find-the-product.html
+++ b/app/views/product-case-testing/find-the-product.html
@@ -126,12 +126,31 @@
   </div>
 
 
+{% endblock %}
+
+{% block bodyEnd %}
+
+  {% block scripts %}
+    {% include "includes/scripts-testing.html" %}
+    {% block pageScripts %}
+    {% endblock %}
+  {% endblock %}
+
 <script>
   jQuery(document).ready(function(){
 
-    setMenuState('products');
+    setMenuState('cases');
     validateTheForm($("#main-content").find('form'));
+    localStorage.removeItem('addCaseToProduct');
+
+    $("#main-content").find('.govuk-button').click(function(){
+      if($('#related-2').is(':checked')) {
+        localStorage.setItem('addCaseToProduct', 'no');
+      }
+      return false;
+    });
 
   });
 </script>
+
 {% endblock %}
