--- a/app/views/product-case-testing/reason-for-creating-case.html
+++ b/app/views/product-case-testing/reason-for-creating-case.html
@@ -13,51 +13,131 @@
 
 
 {% block content %}
-  <div class="govuk-grid-row">
+<div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
+  <h2 class="govuk-error-summary__title" id="error-summary-title">
+    There is a problem
+  </h2>
+  <div class="govuk-error-summary__body">
+
+    <ul class="govuk-list govuk-error-summary__list">
+      <li>
+        <a href="#reason">Select the product is unsafe or non-compliant if it is (or is suspected of being)</a>
+      </li>
+    </ul>
+  </div>
+</div>
+
+ <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
 
         <form action="#" method="post" novalidate>
 
 
-{{ govukRadios({
-  idPrefix: "reason",
-  name: "reason",
-  classes: "govuk-!-padding-top-3",
 
-  fieldset: {
-    legend: {
-      text: "What is the reason for creating a case?",
-      isPageHeading: true,
-      classes: "govuk-fieldset__legend--l"
-    }
-  },
 
-  items: [
-    {
-      value: "unsafeoption",
-      text: "The product is unsafe or non-compliant",
-      hint: {
-        classes: "govuk-!-font-size-16 govuk-!-margin-bottom-4",
-        text: "The product is either unsafe, non-compliant or is suspected of being."
-      }
-    },
-    {
-      value: "issafeoption",
-      text: "The product is safe and compliant",
-      hint: {
-        classes: "govuk-!-font-size-16",
-        text: "The product is safe and compliant but a case will help others avoid testing the same product again."
-      }
-    }
-  ]
-}) }}
 
-{{ govukButton({
-  text: "Continue"
-}) }}
+
+
+
+
+
+
+<div class="govuk-form-group" data-test-for="radio" data-test-ele-name="reason">
+
+  <fieldset class="govuk-fieldset">
+
+  <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+
+    <h1 class="govuk-fieldset__heading">
+      What is the reason for creating a case?
+    </h1>
+
+  </legend>
+
+  <span id="reason-error" class="govuk-error-message">
+    <span class="govuk-visually-hidden">Error:</span> Select the product is unsafe or non-compliant if it is (or is suspected of being)
+  </span>
+
+  <div class="govuk-radios govuk-!-padding-top-3">
+
+
+
+
+
+        <div class="govuk-radios__item">
+          <input class="govuk-radios__input" id="reason" name="reason" type="radio" value="unsafeoption" aria-describedby="reason-item-hint">
+          <label class="govuk-label govuk-radios__label" for="reason">
+        The product is unsafe or non-compliant
+      </label>
+
+          <div id="reason-item-hint" class="govuk-hint govuk-radios__hint govuk-!-font-size-16 govuk-!-margin-bottom-4">
+        The product is either unsafe, non-compliant or is suspected of being.
+      </div>
+
+        </div>
+
+
+
+
+
+
+
+        <div class="govuk-radios__item">
+          <input class="govuk-radios__input" id="reason-2" name="reason" type="radio" value="issafeoption" aria-describedby="reason-2-item-hint">
+          <label class="govuk-label govuk-radios__label" for="reason-2">
+        The product is safe and compliant
+      </label>
+
+          <div id="reason-2-item-hint" class="govuk-hint govuk-radios__hint govuk-!-font-size-16">
+        The product is safe and compliant but a case will help others avoid testing the same product again.
+      </div>
+
+        </div>
+
+
+
+
+  </div>
+
+
+</fieldset>
+
+
+</div>
+
+
+
+
+
+
+
+
+<button class="govuk-button" data-module="govuk-button">
+  Continue
+</button>
+
 
         </form>
 
     </div>
   </div>
+{% endblock %}
+
+{% block bodyEnd %}
+
+  {% block scripts %}
+    {% include "includes/scripts-testing.html" %}
+    {% block pageScripts %}
+    {% endblock %}
+  {% endblock %}
+
+<script>
+  jQuery(document).ready(function(){
+
+    setMenuState('products');
+    validateTheForm($("#main-content").find('form'));
+
+  });
+</script>
+
 {% endblock %}
